--- a/app/assets/stylesheets/candidates.scss
+++ b/app/assets/stylesheets/candidates.scss
@@ -1,3 +1,16 @@
 // Place all the styles related to the Candidates controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.field_with_errors {
+    display: inline-block;
+    input[type="text"] {
+        border-color: salmon;
+        border-width: 2px;
+    }
+    label {
+        color: red;
+    }
+
+}
+
+
